# fbpmn

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile.arm  Dockerfile.multi  README.md  _DEPRECATED_.travis_yml  _PENDING_release_yml  appveyor.yml  e033MBE.Network01Bag.Prop03Sound.html  fbpmn.cabal  overview.graffle  stack.yaml  test_github_actions.sh
.github/workflows/: CI.yml  notes.md
AlloyTest/BPMN_Model/: te002_TICE.bpmn  te003_TIBED.bpmn  te004_TNIBEP.bpmn  te005.bpmn  te006_xor.bpmn
AlloyTest/TLA_Representation/: example_Date.als  example_TICE_check.als  te001.als  te002.als  te003.als  te004.als  te005_xor.als  te006.als
MBE.graffle/: data.plist
app/: Main.hs
benchmark/: Main.hs
bpmn.graffle/: data.plist  image1.emf
models/bpmn-origin/: 001ClientSupplier.bpmn  001ClientSupplier.json  001ClientSupplier.tla  002ClientSupplierDynamic.bpmn  002ClientSupplierDynamic.json  002ClientSupplierDynamic.tla  003OrTest.json  003OrTest.tla  004TravelAgency.bpmn  005TravelAgency.json  006TravelAgency.tla  007CheckTest.bpmn  007CheckTest.tla  008CheckTest.bpmn  008CheckTest.tla  009CheckTest.bpmn  010CheckTest.bpmn  010CheckTest.json  010CheckTest.tla  012OrSize2x2.json  012OrSize2x2.tla  Makefile  README.md  run  srun  test
models/bpmn-origin/expected/: e001ClientSupplier.expected  e001ClientSupplier.json  e002ClientSupplierDynamic.expected  e002ClientSupplierDynamic.json  e003OrTest.expected  e003OrTest.json  e004TravelAgency.expected  e004TravelAgency.json  e005TravelAgency.expected  e005TravelAgency.json  e006TravelAgency.expected  e006TravelAgency.json  e007CheckTest.expected  e007CheckTest.json  e008CheckTest.expected  e008CheckTest.json  e009CheckTest.expected  e009CheckTest.json  e010CheckTest.expected  e010CheckTest.json  e011CheckTest.expected  e011CheckTest.json  e012OrSize2x2.expected  e012OrSize2x2.json  e013OrSize2x3.expected  e013OrSize2x3.json  e014CheckTest.expected  e014CheckTest.json  e015CheckTest.expected  e015CheckTest.json  e016CheckTest.expected  e016CheckTest.json  e017OnlineOrdering.expected  e017OnlineOrdering.json  e018OrSize2x4.expected  e018OrSize2x4.json  e020InternshipProcedure.expected  e020InternshipProcedure.json  e021MBE.expected  e021MBE.json  (+52 more)
models/bpmn-origin/json_from_bpmn/: 004TravelAgency.json  006TravelAgency.json  007CheckTest.json  008CheckTest.json  009CheckTest.json  013OrSize2x3.json  014CheckTest.json  015CheckTest.json  016CheckTest.json  e001ClientSupplier.json  e002ClientSupplierDynamic.json  e003OrTest.json  e004TravelAgency.json  e005TravelAgency.json  e006TravelAgency.json  e007CheckTest.json  e008CheckTest.json  e009CheckTest.json  (+65 more)
models/json-origin/: 001-client-supplier.json  001-client-supplier.tla  001ClientSupplier.json  001ClientSupplier.tla  002ClientSupplierDynamic.json  002ClientSupplierDynamic.tla  003OrTest.json  003OrTest.tla  006TravelAgency.json  006TravelAgency.tla
scripts/: fbpmn-check  fbpmn-check.ps1  fbpmn-log-transform  fbpmn-logs2*  fbpmn-logs2dot  fbpmn-logs2dot.ps1  fbpmn-logs2html.OLD  fbpmn-logs2html.ps1  fbpmn-logs2json.OLD  fbpmn-logs2json.ps1  sfbpmn-check  sfbpmn-check.ps1  wellformed-check  wellformed-check.ps1  wfbpmn-check
scripts/tests/: config-files.json  fbpmn-check.Tests.ps1  fbpmn-logs2dot.Tests.ps1  fbpmn-logs2html.Tests.ps1  fbpmn-logs2json.Tests.ps1  wfbpmn-check.Tests.ps1
src/: Examples.hs  Fbpmn.hs  Prelude.hs
src/Fbpmn/: Helper.hs  Model.hs
test/: Spec.hs
theories/alloy/: Makefile  PWSDefs.als  PWSProp.als  PWSSemantics.als  PWSSemantics_with_time.als  PWSSyntax.als  PWSWellformed.als  RunAlloy.java  RunAlloyAll.java  advancement  example-EB.als  example-EB_check.als  example-MBE-AT.als  example-MBEI-SP_check.als  example-MBENI-SP.als  example-MSE-MEE.als  example-MSE-ST.als  example-STRT_check.als  example-TBE-AT_check.als  example-TCMIE.als  example-TCMIE_check.als  example-TICE.als  example-TICE_check.als  example1.als  example10.als  example10_check.als  example11.als  example12.als  example13_check.als  example1_check.als  example2.als  example2_check.als  example3.als  example3_check.als  example4.als  example4_check.als  example5.als  example5_check.als  example6.als  example6_check.als  (+38 more)
theories/electrum/: PWSDefs.als  PWSProp.als  PWSSemantics.als  PWSSyntax.als  example1.als  example3.als
theories/stla/: NetworkBag.tla  NetworkFifo.tla  NetworkFifoPair.tla  NetworkInbox.tla  PWSConstraints.tla  PWSDefs.tla  PWSSemantics.tla  PWSTypes.tla  UserProperties.tla  configuration_base.cfg  configuration_bounded.cfg  configuration_bounded_base.cfg
theories/tla/: Network.tla  NetworkBag.tla  NetworkCausal.tla  NetworkFifo.tla  NetworkFifoPair.tla  NetworkInbox.tla  NetworkOutbox.tla  NetworkRSC.tla  PWSConstraints.tla  PWSDefs.tla  PWSIntervals.tla  PWSSemantics.tla  PWSTypes.tla  PWSWellFormed.tla  StatsBPMN.tla  UserProperties.tla  configuration.cfg
time-interval/: ti01wf.bpmn  ti01wf_interval.tla  ti02wf.bpmn  ti02wf_interval.tla  ti03wf.bpmn  ti03wf_interval.cfg  ti03wf_interval.tla  ti04wf.bpmn  ti04wf_interval.cfg  ti04wf_interval.tla  ti05wf.bpmn  ti05wf_interval.tla  ti06wf.bpmn  ti06wf_interval.tla  ti10loopBad.bpmn  ti10loopBad_interval.cfg  ti10loopBad_interval.tla  ti11loopGood.bpmn  ti11loopGood_interval.cfg  ti11loopGood_interval.tla  ti12loopBad.bpmn  ti12loopBad_interval.cfg  ti12loopBad_interval.tla  ti13loopGood.bpmn  ti13loopGood_interval.tla  ti14before.bpmn  ti14before_interval.cfg  ti14before_interval.tla  ti15messages.bpmn  ti15messages_interval.tla  ti16messages.bpmn  ti16messages_interval.cfg  ti16messages_interval.tla  ti17OrTest.bpmn  ti17OrTest_interval.cfg  ti17OrTest_interval.tla  ti18OrSize2x2.bpmn  ti18OrSize2x2_interval.cfg  ti18OrSize2x2_interval.tla  ti19OnlineOrdering.bpmn  (+25 more)
web/: README.md  docker-compose.yml
web/backend/: .env  .flaskenv  .gitignore  Dockerfile  README.md  app.py  config.py  diagram.puml  install  requirements.txt  wfbpmn-check
web/doc/: api.adoc  diagram.puml
web/frontend/: API-documentation.yaml  Dockerfile  README.md  nginx.default.conf  package-lock.json  package.json
(+249 files in other folders)
