cabal-version:       1.24
name:                fbpmn
version:             0.1.1
description:         formal tools for BPMN
synopsis:            formal tools for BPMN
homepage:            https://github.com/pascalpoizat/fbpmn
bug-reports:         https://github.com/pascalpoizat/fbpmn/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Poizat
maintainer:          pascal.poizat@gmail.com
copyright:           2018-2019 Pascal Poizat
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

source-repository head
  type:                git
  location:            https://github.com/pascalpoizat/fbpmn.git

library
  hs-source-dirs:      src
  exposed-modules:     Fbpmn.Model
                       Fbpmn.Helper
                       Fbpmn.IO.Bpmn
                       Fbpmn.IO.Dot
                       Fbpmn.IO.Json
                       Fbpmn.IO.Smt
                       Fbpmn.IO.Tla
                       Examples
                       Prelude
  ghc-options:         -Wall
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       base-noprelude
                     , relude
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , neat-interpolation
                     , optparse-applicative
                     , text
                     , xml
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

executable fbpmn
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       fbpmn
                     , base-noprelude
                     , relude
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , neat-interpolation
                     , optparse-applicative
                     , text
                     , xml
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

test-suite fbpmn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       fbpmn
                     , base-noprelude
                     , relude
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , neat-interpolation
                     , optparse-applicative
                     , text
                     , xml
                     , tasty >= 0.11.3
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck >= 0.8.4
                     , tasty-smallcheck >= 0.8.1
                     , tasty-expected-failure >= 0.11.0.4
                     , tasty-html >= 0.4.1.2
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

benchmark fbpmn-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       criterion
                     , fbpmn
                     , base-noprelude
                     , relude
                     , aeson
                     , bytestring
                     , containers
                     , neat-interpolation
                     , text
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

